  - Adjust the caret color to some light color.


Data copied from tables are now added to paste history.
  Note: Paste history can be accessed through ctrl+shift+v or ctrl+shift+insert.

Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checked blue) drivers are now displayed on top of the drop-down.
  Thanks to Peter G. Horvath for the patch.


Bug fixes:

#1392 Code completion on a field shows a wrong sorted list -->
  The behavior is now configurable, see menu File --> New Session properties --> Tab Code completion --> Check box at bottom.
  By default the list is sorted in alphabetical order.

Session menu: Replaced menu name "NewSQLWorksheetActionDummyName" by "New SQL worksheet / New SQL tab"

Error in SQL Parametrisation Plugin:
  SQLs with comments like
  "SELECT * FROM myTable where /*com1*/ id = :myId /*com2*/ ORDER BY id"
  ran into errors.
  Thanks to Stefan Mueller for the merge request.

#1387 Error message and empty Metadata tab when connecting to H2 v1.4.197
  Added type flexibility when calling java.sql.DatabaseMetaData.getClientInfoProperties()

#1384 Look and feel Plugin: Tiny L&F causes NullPointerException in version 3.9.1 at application start.

Installer dialog: On first page of installer wizard the Data Import plugin was not mentioned to be a standard Plugin.

SQL Result: When row number where displayed, the functions "Mark duplicates values" and "Find column" raised exceptions.

#1383 Create data script from SQL fails with column alias
  The problem occurred for SQLs like
  "SELECT substring(number, 3, 9), id FROM contracts"
  Up to now only the first result column was checked for a column name.
  Now checking is continued for all result columns.
  If still no table name can be found the string "PressCtrlH" is placed where the table name is supposed to be.
  "PressCtrlH" is meant to remind that the editors replace function may be used to fix the script.


Small UI fix concerning caret color configuration.


