@@ -63,6 +63,9 @@ Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checke
 
 Bug fixes:
 
+In the context of bug #1389: When reading data type OTHER ResultSet.wasNull() may be called when no data was read before.
+   This resulted in display of "<Error>" in SQL results.
+
 #1392 Code completion on a field shows a wrong sorted list -->
   The behavior is now configurable, see menu File --> New Session properties --> Tab Code completion --> Check box at bottom.
   By default the list is sorted in alphabetical order.
